dev: 결제 시 주문 상태 변경에 대한 낙관적 락 테스트 (+도메인 Version 추가)